<resources>
    <string name="app_name">PruebaValid</string>

    <string name="networkError">Error de red</string>
    <string name="fail_proxy_service">Error en el Servicio de Internet</string>
    <string name="list_songs">Lista de canciones</string>
    <string name="Email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="CaracteresPass">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="init_section">Inicio de Sección</string>
    <string name="register_user">Registra tu Usuario</string>
    <string name="conf_password">Confirmar Contraseña</string>
    <string name="btn_create">Crear Usuario</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="informative">Informativo</string>
    <string name="detail_diaolog">Detalle de diaologo</string>
    <string name="fields_empty">Campos Vacios</string>
    <string name="details_fields_empty">Verifique, ya que hay algun campo vacio</string>
    <string name="internet">Conexión de Internet</string>
    <string name="not_connection_internet">No tienes conexion a internet, busca una coneccion</string>
    <string name="description">Description</string>
    <string name="error">Error</string>
    <string name="select_service">Selecciona la opción que deseas</string>
    <string name="tracks">Canciones</string>
    <string name="artist">Artistas</string>
    <string name="details_password">Los campos contraseña y confirmar contraseña no coinciden</string>
    <string name="title_artists">Lista de Artistas</string>
    <string name="credentials_incorrect">Credenciales</string>
    <string name="details_credentials_incorrect">Verificas tus credenciales, estan incorrectas</string>
    <string name="name">Nombre: </string>
    <string name="duration">Duración: </string>
    <string name="listeners">Reproducciones: </string>
    <string name="artist2">Artistas: </string>
    <string name="rank">Rank:</string>
    <string name="select_page">Escriba la pagina</string>
</resources>
