<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens10dp"
        android:layout_marginEnd="@dimen/dimens10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name_fragment_select_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_service"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimens25sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_select_service_tracks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_100dp"
            android:background="@drawable/btn_general"
            android:text="@string/tracks"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_select_service_topArtist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_fragment_select_service" />

        <Button
            android:id="@+id/btn_select_service_topArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_100dp"
            android:background="@drawable/btn_general"
            android:text="@string/artist"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_select_service_tracks"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_fragment_select_service" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>