<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:id="@+id/card_song"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/colorPrimary"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_3dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center"
            android:id="@+id/civ_card_image"
            android:layout_width="@dimen/dimens_100dp"
            android:layout_height="@dimen/dimens_100dp"
            android:src="@drawable/ic_launcher_foreground"
            android:padding="@dimen/dimens10dp" />

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimens10dp"
                    android:textColor="@color/white"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tv_name_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="What Do You Mean?"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3pt">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimens10dp"
                    android:textColor="@color/white"
                    android:text="@string/duration"/>
                <TextView
                    android:id="@+id/tv_duration_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:textColor="@color/white" />

                </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3pt">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimens10dp"
                    android:textColor="@color/white"
                    android:text="@string/listeners"/>

                <TextView
                    android:id="@+id/tv_listeners"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="101635"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3pt">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimens10dp"
                    android:textColor="@color/white"
                    android:text="@string/artist2"/>
                <TextView
                    android:id="@+id/tv_artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Twenty One Pilots"
                    android:textColor="@color/white" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_3pt">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens10dp"
                android:textColor="@color/white"
                android:text="@string/rank"/>

            <TextView
                android:id="@+id/tv_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/white" />

        </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>